--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
-  - title: "Services"
-    url: /services/    
+  - title: "Experience"
+    url: /experience/    
     
   # - title: "Portfolio"
   #   url: /portfolio/
