--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : https://qingyong-hu.github.io/
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "qingyong.jpg"
   name             : "Qingyong Hu"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D Candidate, HKUST | B.Eng, USTC"
