--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Qingyong Hu"
+title                    : "Qingyong Hu's Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Qingyong Hu"
 description              : &description "personal description"
-url                      : https://qingyong-hu.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://qingyong-hu.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : https://qingyong-hu.github.io/
+repository               : https://qingyong-hu.github.io
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
